src/c_include/pruio.h

typedef unsigned char uint8;   //!< 8 bit unsigned integer data type.
typedef unsigned short uint16; //!< 16 bit unsigned integer data type.
typedef unsigned int uint32;   //!< 32 bit unsigned integer data type.
typedef float float_t;         //!< float data type.
//! forward declaration
typedef struct pruIo pruIo;
/** \brief Wrapper structure for PruIo.

\since 0.0
*/
typedef struct pruIo{
  char* Errr;      //!< Pointer for error messages.

  adcUdt* Adc;     //!< Pointer to ADC subsystem structure.
  gpioUdt* Gpio;   //!< Pointer to GPIO subsystem structure.
  pwmssUdt* PwmSS; //!< Pointer to PWMSS subsystem structure.
  //timerUdt* TimSS; //!< Pointer to TIMER subsystem structure.
  pwmMod* Pwm;     //!< Pointer to ePWM module structure (in PWMSS subsystem).
  capMod* Cap;     //!< Pointer to eCAP module structure (in PWMSS subsystem).
  qepMod* Qep;     //!< pointer to eQEP module structure (in PWMSS subsystem)

  uint32* DRam;    //!< Pointer to access PRU DRam.
  ballSet
    *Init,         //!< The subsystems register data at start-up (to restore subsystems at the end).
    *Conf;         //!< The subsystems register data used by libpruio (current local data).
  void
    *ERam,         //!< Pointer to read PRU external ram.
    *DInit,        //!< Pointer to block of subsystems initial data.
    *DConf,        //!< Pointer to block of subsystems configuration data.
    *MOffs;        //!< Configuration offset for modules.
  uint8
    *BallInit,     //!< Pointer for original Ball configuration.
    *BallConf;     //!< Pointer to ball configuration (CPU pin muxing).
  uint32
    EAddr,         //!< The address of the external memory (PRUSS-DDR).
    ESize,         //!< The size of the external memory (PRUSS-DDR).
    DSize,         //!< The size of a data block (DInit or DConf).
    PruNo,         //!< The PRU number to use (defaults to 1).
    PruIRam,       //!< The PRU instruction ram to load.
    PruDRam;       //!< The PRU data ram.
  int16
    ParOffs,       //!< The offset for the parameters of a module.
    DevAct;        //!< Active subsystems.
//! List of GPIO numbers, corresponding to ball index.
  uint8 BallGpio[PRUIO_AZ_BALL + 1];
//! Interrupt settings (we also set default interrupts, so that the other PRUSS can be used in parallel).
  struct __pruss_intc_initdata IntcInit;
} pruIo;
/** \brief Wrapper function for QepMod::config().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number (either input A, B or I).
\param PMax The maximum position counter value (defaults to &h7FFFFFFF).
\param VHz The frequency to compute velocity values (defaults to 25 Hz).
\param Scale The Scale factor for velocity values (defaults to 1.0).
\param Mo The modus to use for pinmuxing (0 or PRUIO_PIN_RESET).
\returns Zero on success (otherwise a string with an error message).

\since 0.4
*/
char* pruio_qep_config(pruIo* Io, uint8 Ball, uint32 PMax, float_t VHz, float_t Scale, uint8 Mo);
/** \brief Wrapper function for QepMod::Value().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number (as in QepMod::config() call).
\param Posi A pointer to store the position value (or NULL).
\param Velo A pointer to store the valocity value (or NULL).
\returns Zero on success (otherwise a string with an error message).

\since 0.4
*/
char* pruio_qep_Value(pruIo* Io, uint8 Ball, uint32* Posi, float_t* Velo);
/** \brief Wrapper function for CapMod::Value().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to test.
\param Hz A pointer to store the frequency value (or null).
\param Du A pointer to store the duty cycle value (or null).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_cap_Value(pruIo* Io, uint8 Ball, float_t* Hz, float_t* Du);
/** \brief Wrapper function for PwmMod::Value().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to test.
\param Hz A pointer to store the frequency value (or null).
\param Du A pointer to store the duty cycle value (or null).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_pwm_Value(pruIo* Io, uint8 Ball, float_t* Hz, float_t* Du);
/** \brief Wrapper function for PwmMod::setValue().
\param Io The pointer of the PruIo instance
\param Ball the CPU ball number to set
\param Hz The frequency to set (or -1 for no change).
\param Du The duty cycle to set (0.0 to 1.0, or -1 for no change).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_pwm_setValue(pruIo* Io, uint8 Ball, float_t Hz, float_t Du);
/** \brief Wrapper function for TimerUdt::Value().
\param Io The pointer of the  PruIo instance.
\param Ball The header pin to configure.
\param Dur1 The duration in [ms] before state change (or 0 to stop timer).
\param Dur2 The duration in [ms] for the state change (or 0 for minimal duration).
\param Mode The modus to set (defaults to 0 = one cycle positive pulse).
\returns Zero on success, an error string otherwise.

\since 0.4
*/
char* pruio_tim_Value(pruIo* Io, uint8 Ball, float_t* Dur1, float_t* Dur2, uint16* Mode);
/** \brief Wrapper function for TimerUdt::setValue().
\param Io The pointer of the PruIo instance.
\param Ball The header pin to configure.
\param Dur1 The duration in [ms] before state change (or 0 to stop timer).
\param Dur2 The duration in [ms] for the state change (or 0 for minimal duration).
\param Mode The modus to set (defaults to 0 = one cycle positive pulse).
\returns Zero on success, an error string otherwise.

\since 0.4
*/
char* pruio_tim_setValue(pruIo* Io, uint8 Ball, float_t Dur1, float_t Dur2, uint16 Mode);