src/python/libpruio/pruio.py


# pruio_c_wrapper.bas: 165
if hasattr(_libs['pruio'], 'pruio_cap_Value'):
  pruio_cap_Value = _libs['pruio'].pruio_cap_Value
  pruio_cap_Value.argtypes = [POINTER(PruIo), UInt8, POINTER(Float_t), POINTER(Float_t)]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_cap_Value.restype = ReturnString
  else:
      pruio_cap_Value.restype = String
      pruio_cap_Value.errcheck = ReturnString

# pruio_c_wrapper.bas: 178
if hasattr(_libs['pruio'], 'pruio_qep_config'):
  pruio_qep_config = _libs['pruio'].pruio_qep_config
  pruio_qep_config.argtypes = [POINTER(PruIo), UInt8, UInt32, Float_t, Float_t, UInt8]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_qep_config.restype = ReturnString
  else:
      pruio_qep_config.restype = String
      pruio_qep_config.errcheck = ReturnString

# pruio_c_wrapper.bas: 188
if hasattr(_libs['pruio'], 'pruio_qep_Value'):
  pruio_qep_Value = _libs['pruio'].pruio_qep_Value
  pruio_qep_Value.argtypes = [POINTER(PruIo), UInt8, POINTER(UInt32), POINTER(Float_t)]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_qep_Value.restype = ReturnString
  else:
      pruio_qep_Value.restype = String
      pruio_qep_Value.errcheck = ReturnString

# pruio_c_wrapper.bas: 199
if hasattr(_libs['pruio'], 'pruio_pwm_Value'):
  pruio_pwm_Value = _libs['pruio'].pruio_pwm_Value
  pruio_pwm_Value.argtypes = [POINTER(PruIo), UInt8, POINTER(Float_t), POINTER(Float_t)]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_pwm_Value.restype = ReturnString
  else:
      pruio_pwm_Value.restype = String
      pruio_pwm_Value.errcheck = ReturnString

# pruio_c_wrapper.bas: 209
if hasattr(_libs['pruio'], 'pruio_pwm_setValue'):
  pruio_pwm_setValue = _libs['pruio'].pruio_pwm_setValue
  pruio_pwm_setValue.argtypes = [POINTER(PruIo), UInt8, Float_t, Float_t]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_pwm_setValue.restype = ReturnString
  else:
      pruio_pwm_setValue.restype = String
      pruio_pwm_setValue.errcheck = ReturnString

# pruio_c_wrapper.bas: 221
if hasattr(_libs['pruio'], 'pruio_tim_Value'):
  pruio_tim_Value = _libs['pruio'].pruio_tim_Value
  pruio_tim_Value.argtypes = [POINTER(PruIo), UInt8, POINTER(Float_t), POINTER(Float_t), POINTER(UInt16)]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_tim_Value.restype = ReturnString
  else:
      pruio_tim_Value.restype = String
      pruio_tim_Value.errcheck = ReturnString

# pruio_c_wrapper.bas: 232
if hasattr(_libs['pruio'], 'pruio_tim_setValue'):
  pruio_tim_setValue = _libs['pruio'].pruio_tim_setValue
  pruio_tim_setValue.argtypes = [POINTER(PruIo), UInt8, Float_t, Float_t, UInt16]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_tim_setValue.restype = ReturnString
  else:
      pruio_tim_setValue.restype = String
      pruio_tim_setValue.errcheck = ReturnString
